--- a/index.css
+++ b/index.css
@@ -22,6 +22,45 @@ body{
     list-style: none;
     
 }
+#dropbtn {
+    background-color: transparent;
+    padding: 16px;
+    font-size: 18px;
+    border: none;
+  }
+  
+  #dropdown {
+    position: relative;
+    display: inline-block;
+    
+  }
+  
+  #dropdown-content {
+    display:none;
+    position:absolute;
+    width: auto;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    padding: 30px;
+  }
+  
+  #dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    
+
+  }
+  
+  #dropdown-content a:hover {background-color: #ddd;}
+  
+  #dropdown:hover #dropdown-content {display: block;}
+  
+ 
+
+
 #navbar>div:nth-child(3){
     width: 20%;
     height: 40px;
