--- a/airdopes.css
+++ b/airdopes.css
@@ -99,6 +99,19 @@ a{
     background: none;
     border: none;
 }
+#count{
+    border-radius: 100%;
+    background-color: red;
+    height: 20px;
+    width: 20px;
+    padding-bottom: 2px;
+}
+#count>h6{
+    text-align: center;
+    padding-bottom: 5px;
+    margin: auto;
+    font-size: 20px;
+}
 
         /* sliding image */
 
@@ -189,7 +202,71 @@ a{
     padding: 15px 15px 15px 15px;
     text-align: center;   
 }
-            
+  
+#footer{
+    display: flex;
+    width: 100%;
+    height: auto;
+    border-top: 2px solid black;
+}
+#footer>div:nth-child(1){
+    margin: auto;
+}
+#footer>div:nth-child(1)>img{
+    width: 20%;
+}
+#footer>div:nth-child(1)>p{
+    color: gray;
+}
+#footer>div:nth-child(1)>div{
+    border: 2px solid red;
+    display: flex;
+    justify-content: space-between;
+    
+}
+#footer>div:nth-child(1)>div>input{
+    border: none;
+}
+#footer>div:nth-child(1)>div>button{
+    background-color: red;
+    width: 150px;
+    border: none;
+    height: 30px;
+    border-radius: 5px;
+    
+}
+#shop{
+    width: auto;
+    height: auto;
+    margin: auto;
+}
+#shop>div{
+    display: flex;
+    gap: 30px;
+    
+}
+#shop>div>div{
+    border-right: 1px solid gray;
+    padding-right: 20px;
+    color: gray;
+}
+
+#help{
+    width: auto;
+    height: auto;
+    margin: auto;
+}
+#help>div{
+    display: flex;
+    gap: 30px;
+    
+}
+#help>div>div{
+    border-right: 1px solid gray;
+    padding-right: 20px;
+    color: gray;
+}
+
             /* medium size */
 @media all and (min-width:700px)and (max-width:1000px) {
             /* navbar */
